--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,13 @@ venv/
 # Local database files
 backend/*.sqlite3
 
+# Media folder
+backend/media/
+
+# Migrations
+backend/**/migrations/
+
+
 # Environment variables
 .env
 .env.local
