--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "formik": "^2.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-rating-stars-component": "^2.2.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1",
