Completed Chnnels implementation for chat.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,13 @@ services:
     networks:
       - app-network
 
+  redis:
+    image: "redis:alpine"
+    ports:
+      - '6380:6379'
+    networks:
+      - app-network
+
   frontend:
     build:
       context: ./frontend
@@ -53,3 +60,8 @@ services:
     depends_on:
       db:
         condition: service_healthy
+    healthcheck:
+      test: ["CMD-SHELL", "curl --fail http://localhost:8000 || exit 1"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
