--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,10 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.3",
     "formik": "^2.4.6",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.2",
     "react": "^18.3.1",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
     "react-rating-stars-component": "^2.2.0",
     "react-redux": "^9.1.2",
