--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,6 +5,8 @@ attrs==24.2.0
 autobahn==24.4.2
 Automat==24.8.1
 billiard==4.2.1
+boto3==1.35.53
+botocore==1.35.53
 celery==5.4.0
 certifi==2024.8.30
 cffi==1.17.1
@@ -23,6 +25,7 @@ django-cors-headers==4.4.0
 django-elasticsearch-dsl==8.0
 django-phone-field==1.8.1
 django-phonenumber-field==8.0.0
+django-storages==1.14.4
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
 elastic-transport==8.15.1
@@ -31,6 +34,7 @@ elasticsearch-dsl==8.15.4
 hyperlink==21.0.0
 idna==3.10
 incremental==24.7.2
+jmespath==1.0.1
 kombu==5.4.2
 msgpack==1.1.0
 paypalrestsdk==1.13.3
@@ -48,6 +52,7 @@ python-dotenv==1.0.1
 python-magic==0.4.27
 redis==5.1.1
 requests==2.32.3
+s3transfer==0.10.3
 service-identity==24.1.0
 six==1.16.0
 sqlparse==0.5.1
