--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,7 +3,8 @@ FROM node:20-alpine
 WORKDIR /app/frontend
 
 COPY package*.json ./
-RUN npm install
+RUN npm install --registry=https://registry.npmjs.org/
+
 
 COPY . .
 
