Backend working still celery has issues.

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,19 +1,71 @@
+# events {}
+
+# http {
+#     upstream daphne_backend {
+#         server backend:8000;  # Daphne service
+#     }
+
+#     server {
+#         listen 80;
+
+#         location / {
+#             proxy_pass http://daphne_backend;
+#             proxy_set_header Host $host;
+#             proxy_set_header X-Real-IP $remote_addr;
+#             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#             proxy_set_header X-Forwarded-Proto $scheme;
+#         }
+#     }
+# }
+
+
 events {}
 
 http {
-    upstream daphne_backend {
-        server backend:8000;  # Daphne service
+    upstream backend_asgi {
+        server backend:8000;  # Daphne handling both HTTP and WebSocket traffic
     }
 
     server {
         listen 80;
 
-        location / {
-            proxy_pass http://daphne_backend;
+        # Serve static files from the Django app
+        location /static/ {
+            alias /backend/static;
+            access_log off;
+            expires 30d;
+        }
+
+        # Serve media files from the Django app
+        location /media/ {
+            alias /backend/media;
+            access_log off;
+            expires 30d;
+        }
+
+        # Proxy HTTP and WebSocket requests to Daphne
+        location /api/ {
+            proxy_pass http://backend_asgi;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+
+            # Standard proxy headers
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+
+            # WebSocket headers
+            proxy_set_header X-Forwarded-Host $host;
+            proxy_set_header X-Forwarded-Port $server_port;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        # If you have a frontend to serve, adjust this location to serve it
+        location / {
+            root /var/www/frontend/dist;  # Path to your frontend files
+            try_files $uri /index.html;
         }
     }
 }
