--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -19,7 +19,7 @@ click-plugins==1.1.1
 click-repl==0.3.0
 constantly==23.10.4
 cryptography==43.0.1
-daphne==4.1.2
+daphne
 Django==5.0.7
 django-cors-headers==4.4.0
 django-elasticsearch-dsl==8.0
