--- a/nginx/nginx-local.conf
+++ b/nginx/nginx-local.conf
@@ -1,3 +1,6 @@
+# Nginx configuration file for local testing,
+# Serving the application in local host.
+
 events {}
 
 http {
@@ -22,14 +25,13 @@ http {
 
     server {
         listen 80;
-        server_name api.brainbridgelearning.shop;  # Your subdomain
+        server_name localhost;  # Change this to your domain in production
 
         # Enable CORS for Vercel frontend
-        add_header 'Access-Control-Allow-Origin' 'https://brainbridgelearning.shop' always;  # Your main domain
+        add_header 'Access-Control-Allow-Origin' '*' always;
         add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
         add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization' always;
         add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range' always;
-        add_header 'Access-Control-Allow-Credentials' 'true' always;
 
         # Serve static files from the Django app
         location /static/ {
@@ -50,10 +52,9 @@ http {
         # Handle preflight requests
         location / {
             if ($request_method = 'OPTIONS') {
-                add_header 'Access-Control-Allow-Origin' 'https://brainbridgelearning.shop';
+                add_header 'Access-Control-Allow-Origin' '*';
                 add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS';
                 add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
-                add_header 'Access-Control-Allow-Credentials' 'true';
                 add_header 'Access-Control-Max-Age' 1728000;
                 add_header 'Content-Type' 'text/plain; charset=utf-8';
                 add_header 'Content-Length' 0;
