--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -25,7 +25,7 @@ http {
         server_name api.brainbridgelearning.shop;  # Your subdomain
 
         # Enable CORS for Vercel frontend
-        add_header 'Access-Control-Allow-Origin' 'https://brainbridgelearning.shop' always;  # Your main domain
+        add_header 'Access-Control-Allow-Origin' '*' always;  # Your main domain
         add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
         add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization' always;
         add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range' always;
@@ -50,7 +50,7 @@ http {
         # Handle preflight requests
         location / {
             if ($request_method = 'OPTIONS') {
-                add_header 'Access-Control-Allow-Origin' 'https://brainbridgelearning.shop';
+                add_header 'Access-Control-Allow-Origin' '*';
                 add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS';
                 add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
                 add_header 'Access-Control-Allow-Credentials' 'true';
