--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -22,10 +22,31 @@ http {
 
     server {
         listen 80;
+        server_name api.brainbridgelearning.shop;
+        return 301 https://$host$request_uri;
+    }
+
+    server {
+        listen 443 ssl;
         server_name api.brainbridgelearning.shop;  # Your subdomain
 
+        ssl_certificate /etc/letsencrypt/live/api.brainbridgelearning.shop/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/api.brainbridgelearning.shop/privkey.pem;
+
+        # SSL settings
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers 'ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384';
+        ssl_prefer_server_ciphers on;
+
+        # Security Headers
+        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+        add_header X-Content-Type-Options "nosniff" always;
+        add_header X-Frame-Options "SAMEORIGIN" always;
+        add_header X-XSS-Protection "1; mode=block" always;
+        add_header Referrer-Policy "no-referrer-when-downgrade" always;
+
         # Enable CORS for Vercel frontend
-        add_header 'Access-Control-Allow-Origin' '*' always;  # Your main domain
+        add_header 'Access-Control-Allow-Origin' '*' always;
         add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
         add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization' always;
         add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range' always;
@@ -68,7 +89,7 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            
+
             # Timeouts
             proxy_connect_timeout 60s;
             proxy_send_timeout 60s;
@@ -82,7 +103,7 @@ http {
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
             proxy_set_header Host $host;
-            
+
             # Timeouts for WebSocket
             proxy_connect_timeout 7d;
             proxy_send_timeout 7d;
@@ -105,3 +126,4 @@ http {
         text/css
         text/plain;
 }
+
