--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -30,6 +30,8 @@ http {
         listen 443 ssl;
         server_name api.brainbridgelearning.shop;  # Your subdomain
 
+	    client_max_body_size 10G;
+
         ssl_certificate /etc/letsencrypt/live/api.brainbridgelearning.shop/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/api.brainbridgelearning.shop/privkey.pem;
 
@@ -72,7 +74,7 @@ http {
         location / {
             if ($request_method = 'OPTIONS') {
                 add_header 'Access-Control-Allow-Origin' '*';
-                add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS';
+                add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, PATCH, OPTIONS';
                 add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
                 add_header 'Access-Control-Allow-Credentials' 'true';
                 add_header 'Access-Control-Max-Age' 1728000;
@@ -91,9 +93,9 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
 
             # Timeouts
-            proxy_connect_timeout 60s;
-            proxy_send_timeout 60s;
-            proxy_read_timeout 60s;
+            proxy_connect_timeout 5000s;
+            proxy_send_timeout 5000s;
+            proxy_read_timeout 5000s;
         }
 
         # Handle WebSocket connections
