Updated socket and nginx configuration

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -103,13 +103,18 @@ http {
             proxy_pass http://backend_asgi;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "upgrade";
+            proxy_set_header Connection "Upgrade";  # Changed from "upgrade" to "Upgrade"
             proxy_set_header Host $host;
-
-            # Timeouts for WebSocket
-            proxy_connect_timeout 7d;
-            proxy_send_timeout 7d;
-            proxy_read_timeout 7d;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # WebSocket specific settings
+            proxy_buffering off;
+            proxy_redirect off;
+            proxy_read_timeout 86400s;
+            proxy_send_timeout 86400s;
+            proxy_connect_timeout 86400s;
         }
     }
 
