--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -31,7 +31,7 @@ http {
         server_name api.brainbridgelearning.shop;  # Your subdomain
 
 	    client_max_body_size 10G;
-        client_body_buffer_size 10M;
+        client_body_buffer_size 1024m;
 
         ssl_certificate /etc/letsencrypt/live/api.brainbridgelearning.shop/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/api.brainbridgelearning.shop/privkey.pem;
